モデル修正
